Modal to add skill which endure the user can't add a skill we don't have as an option

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
           <div class="skill_options row form-group hide-options">
           </div>
-            <button data-formname="add_skill" data-method="POST" data-url="/mylink" class="btn btn-pry submit_now mx-auto" id="add_skill_btn">Submit</button>
+            <button data-formname="add_skill" data-method="POST" data-url="/mylink" class="btn btn-pry submit_now mx-auto" id="add_skill_btn">Add skill</button>
             <button class="btn btn-pry mx-auto loading hide_button" id="add_skill_loader">
               <span class="spinner-grow spinner-grow-sm" role="status" aria-hidden="true"></span>
               <span class="spinner-grow spinner-grow-sm" role="status" aria-hidden="true"></span>
@@ -72,6 +72,7 @@
     <script src="./bootstrap-js/bootstrap.js" charset="utf-8"></script>
     <script src="./bootstrap-js/popper.js" charset="utf-8"></script>
     <script src="./modal.js" charset="utf-8"></script>
+    <script src="./testapi.js" charset="utf-8"></script>
 
   </body>
 </html>
