Modal to add skill which endure the user can't add a skill collapses well

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
   <a href='#' type="button" name="button" class="call-modal" title="Add skill" data-modal-size="md">&plus;
     <div class="hidden-content">
 
-      <form class="form skill_form" name="add_skill" id="">
+      <form class="form skill_form container" name="add_skill" id="">
 
           <div class="form-group row">
             <i class="search-icon" aria-hidden="true">
