Icon should show on mobile without hover effect

--- a/index.html
+++ b/index.html
@@ -24,6 +24,13 @@
       margin-bottom: 32px!important;
     }
 
+    @media (min-width: 320px) and (max-width: 480px) {
+        .upload-section{
+          margin-bottom: 2px!important;
+        }
+    }
+
+
     #edit_text{
     display: inline-block;
     margin-top: 13px;
