--- a/index.html
+++ b/index.html
@@ -64,14 +64,17 @@
         }
 
         .lists li:hover .list-trash{
-          width: 32px;
-          height: 32px;
-          background-color: #05448230;
-          border-radius: 3px;
           opacity: 1;
           /* color: red; */
           /* transform: scale(1.09); */
           /* display: inline-block; */
+        }
+
+        .list-trash:hover{
+          width: 32px;
+          height: 32px;
+          background-color: #05448230;
+          border-radius: 3px;
         }
       }
 
