Icon should show on mobile without hover effect

--- a/index.html
+++ b/index.html
@@ -51,6 +51,10 @@
     .form-check-label{
       margin-left: 12px;
     }
+
+    .list-trash{
+      cursor: pointer;
+    }
     @media (pointer: fine) {
         /* ... */
         .list-trash{
