Icon should show on mobile without hover effect

--- a/index.html
+++ b/index.html
@@ -54,6 +54,8 @@
 
     .list-trash{
       cursor: pointer;
+      width: 32px;
+      height: 32px;
     }
     @media (pointer: fine) {
         /* ... */
@@ -75,8 +77,8 @@
         }
 
         .list-trash:hover{
-          width: 32px;
-          height: 32px;
+          /* width: 32px;
+          height: 32px; */
           background-color: #05448230;
           border-radius: 3px;
         }
