--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
 
     <style media="screen">
 
+
+
     .upload-section, #skills, #socials{
       margin-bottom: 32px!important;
     }
@@ -134,7 +136,7 @@ height: 24px;
 <body>
 
 
-
+<!--
 <div class="sidenav sticky-top" id="sideNav">
     <div class="logo__wrapper">
         <div class="d-flex justify-content-center align-items-center logo__image">
@@ -151,9 +153,29 @@ height: 24px;
         <li><a href="#">FAQs</a></li>
         <li><a href="#">Settings</a></li>
     </ul>
-</div>
+</div> -->
 
-<div id="body__click"></div>
+
+
+            <div class="sidenav" id="sideNav">
+              <div class="logo__wrapper">
+                <div class="d-flex justify-content-center align-items-center logo__image">
+                  <img src="../../img/navLogo.svg" alt="" />
+                </div>
+              </div>
+            ​
+              <ul class="sidenav_links">
+                <li><a href="#">Dashboard</a></li>
+                <li><a href="#" class="active">Profile</a></li>
+                        <li><a href="#">Messages</a></li>
+                        <li><a href="#">Employers</a></li>
+                <li><a href="#">Support</a></li>
+                <li><a href="#">FAQs</a></li>
+                <li><a href="#">Settings</a></li>
+              </ul>
+            </div>
+
+      <div id="body__click"></div>
 
             <div class="modal fade modal-static" tabindex="-1" role="dialog" id="global_modal">
               <div class="modal-dialog modal-dialog-centered">
@@ -214,6 +236,10 @@ height: 24px;
                 </div>
             </div>
         </div>
+
+
+
+      
 
         <section id="portfolio" class="mt-4">
             <div class="container-fluid">
@@ -573,8 +599,8 @@ height: 24px;
     <script src="./bootstrap-js/popper.js"></script>
     <script src="./modal.js"></script>
     <script src="./bootstrap-js/bootstrap.js"></script>
-    <script src="./side-nav.js"></script>
     <script src="./eprofile.js"></script>
+    <script src="./side-nav.js"></script>
 </body>
 
 </html>
