--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@ height: 24px;
             <div class="sidenav" id="sideNav">
               <div class="logo__wrapper">
                 <div class="d-flex justify-content-center align-items-center logo__image">
-                  <img src="../../img/navLogo.svg" alt="" />
+                  <img src="./img/navLogo.svg" alt="" />
                 </div>
               </div>
             ​
@@ -239,7 +239,7 @@ height: 24px;
 
 
 
-      
+
 
         <section id="portfolio" class="mt-4">
             <div class="container-fluid">
