--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@ height: 24px;
             <div class="modal fade modal-static" tabindex="-1" role="dialog" id="global_modal">
               <div class="modal-dialog modal-dialog-centered">
                 <div class="modal-content">
-                  <div class="container">
+                  <!-- <div class="container"> -->
 
                   <div class="modal-header">
                     <h5 class="modal-title"></h5>
@@ -189,7 +189,7 @@ height: 24px;
                     </button>
                   </div>
                   <div class="modal-body"></div>
-                </div>
+                <!-- </div> -->
                 </div>
               </div>
             </div>
@@ -266,7 +266,7 @@ height: 24px;
                                 <a href="#" type="button" class="btn btn-lg btn-primary call-modal"  title="Edit profile" data-modal-size="lg"><span id="edit_text">Edit Profile</span>
                                       <div class="hidden-content">
 
-                                        <div class="container">
+                                        <!-- <div class="container"> -->
                                               <form action="" id="edit-profile">
                                                 <p id="error-message"></p>
                                                 <p id="success-message"></p>
@@ -317,32 +317,32 @@ height: 24px;
 
                                                 <div class="skills-choice">
                                                     <div class="row">
-                                                        <div class="col-md-6">
+                                                        <div class="col-md-6 tracks">
                                                             <label class="super-label"
                                                                 for="exampleFormControl">Track(s)</label>
                                                             <div class="form-group form-check">
-                                                                <input type="checkbox" class="form-check-input"
+                                                                <input type="checkbox" class="form-check-input noHover"
                                                                     id="Backend" value="Backend Development">
                                                                 <label class="form-check-label"
                                                                     for="exampleCheck1">Backend
                                                                     Development</label>
                                                             </div>
                                                             <div class="form-group form-check">
-                                                                <input type="checkbox" class="form-check-input"
+                                                                <input type="checkbox" class="form-check-input noHover"
                                                                     id="design" value="UI/UX Design">
                                                                 <label class="form-check-label"
                                                                     for="exampleCheck1">UI/UX
                                                                     Design</label>
                                                             </div>
                                                             <div class="form-group form-check">
-                                                                <input type="checkbox" class="form-check-input"
+                                                                <input type="checkbox" class="form-check-input noHover"
                                                                     id="frontend" value="frontend">
                                                                 <label class="form-check-label"
                                                                     for="exampleCheck1">Frontend
                                                                     Development</label>
                                                             </div>
                                                             <div class="form-group form-check">
-                                                                <input type="checkbox" class="form-check-input"
+                                                                <input type="checkbox" class="form-check-input noHover"
                                                                     id="mobile" value="Mobile Development">
                                                                 <label class="form-check-label"
                                                                     for="exampleCheck1">Mobile
@@ -373,14 +373,14 @@ height: 24px;
                                                     </div>
                                                 </div>
 
-                                                <div class="text-center">
+                                                <div class="text-center save_profile">
                                                     <button type="submit" class="btn btn-lg btn-primary">Save
                                                         profile</button>
                                                 </div>
 
 
                                               </form>
-                                        </div>
+                                        <!-- </div> -->
 
                                       </div>
 
